2-webservers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-server
  namespace: shard-share
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-server
  template:
    metadata:
      labels:
        app: blue-server
    spec:
      containers:
      - name: nginx
        image: docker.io/pebcac/blueweb:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: shard-share
spec:
  selector:
    app: blue-server
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-server
  namespace: shard-share
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-server
  template:
    metadata:
      labels:
        app: green-server
    spec:
      containers:
      - name: nginx
        image: docker.io/pebcac/greenweb:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: shard-share
spec:
  selector:
    app: green-server
  ports:
  - protocol: TCP
    port: 80
