3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shard-ingress
  namespace: shard-share
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 80
